=======
CHANGES
=======

3.8.0 (unreleased)
------------------

* zope.app.security was only a testing dependency so made it such.

3.7.0 (2009-04-01)
------------------

- Removed deprecated `zope:defaultView` directive and its
  implementation.  New directive to set default view is
  `browser:defaultView`.

3.6.1 (2009-03-12)
------------------

- Make ``class`` directive schemas importable from old location,
  raising a deprecation warning. It was moved in the previous release,
  but some custom directives could possibly use its schemas. 

- Deprecate import of ClassDirective to announce about new location.

- Change package's mailing list address to zope-dev at zope.org,
  because zope3-dev at zope.org is now retired.

- Adapt to the move of IDefaultViewName from zope.component.interfaces
  to zope.publisher.interfaces.

3.6.0 (2009-01-31)
------------------

- Moved the implementation of the <class> directive from this package to
  `zope.security`.  In particular, the module
  `zope.app.component.contentdirective` has moved to
  `zope.security.metaconfigure`, and a compatibility import has been
  left in its place.

- Extracted `zope.site` from zope.app.component with backwards
  compatibility imports in place. Local site related functionality
  is now in `zope.site` and packages should import from there.

- Remove more deprecated on 3.5 code:

  * zope.app.component.fields module that was pointing to the
    removed back35's LayerField.
  * zope.app.component.interface module that was moved to
    zope.component.interface ages ago.
  * zope:content and zope:localUtility directives.
  * zope:factory directive.
  * deprecated imports in zope.component.metaconfigure
  * browser:tool directive and all zope.component.browser
    meta.zcml stuff.

- Remove "back35" extras_require as it doesn't make
  any sense now.

- Remove zope.modulealias test dependency as it is
  not used anywhere.

- Deprecate ISite and IPossibleSite imports from