@@ -82,6 +82,7 @@ setup(name='zope.app.component',
           'zope.schema',
           'zope.security',
           'zope.traversing',
+          'zope.componentvocabulary',
           'ZODB3',
           ],
       include_package_data=True,
