@@ -5,7 +5,10 @@ CHANGES
 3.8.0 (unreleased)
 ------------------
 
-* zope.app.security was only a testing dependency so made it such.
+- zope.app.security was only a testing dependency so made it such.
+
+- zope.componentvocabulary has the vocabulary implementations now,
+  import them from there for backwards compatibility.
 
 3.7.0 (2009-04-01)
 ------------------
